tests/fixtures/resolve/unresolved_name.diag
error: unresolved name
  --> unresolved_name.veyl:2:5
   |
  2 |     missing();
   |     ^^^^^^^
